k8s/infra/auth/vault/base/https-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: vault-https
  namespace: vault
spec:
  parentRefs:
    - name: internal-selfsigned
      namespace: gateway
  hostnames:
    - "vault.kundun.dev"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: vault
          port: 8200
